Added Responsive styles for banner
Deals Section added

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -364,8 +364,8 @@ header .header-styles .left .sections .menu-close-btn {
 
 
 .banner .banner-indicator .indicator-dot {
-    width: 40px;
-    height: 12px;
+    width: 2.5rem;
+    height: .6rem;
     background: var(--white);
     border-radius: 1.5rem;
     cursor: pointer;
@@ -384,6 +384,91 @@ header .header-styles .left .sections .menu-close-btn {
 .banner .banner-indicator .indicator-dot.active {
     background: var(--link-dark-color);
 }
+
+
+/* Deals section */
+#deals  {
+    margin: 5rem 0;
+}
+#deals .deal-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+#deals .deal-container .deal-section:first-child {
+    background: url('../images/bg-2.jpg') no-repeat;
+    background-size: 150%;
+}
+#deals .deal-container .deal-section:last-child {
+    background: url('../images/bg-3.jpg') no-repeat;
+    background-size: 140%;
+    background-position-y: -30px;
+}
+#deals .deal-container .deal-section {
+    width: 49%;
+    height: 350px;
+    padding:3rem 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 10px var(--link-dark-color);
+    transition: all .3s ease-in-out;
+    
+}
+#deals .deal-container .deal-section:hover{
+    box-shadow: 0 0 15px var(--link-dark-color);
+    transform: scale(1.02);
+}
+#deals .deal-container .deal-section .deal-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: var(--white);
+    margin-bottom: 1rem;
+}
+#deals .deal-container .deal-section .deal-heading {
+    font-size: 2.1rem;
+    max-width: 70%;
+    font-weight: 800;
+    color: var(--white);
+    margin-bottom: 1rem;
+}
+#deals .deal-container .deal-section .deal-offer {
+    font-size: .8rem;
+    opacity: .8;
+    color: var(--white);
+    margin-bottom: 3rem;
+}
+#deals .deal-container .deal-section .explore-items {
+    color: var(--white);
+    background: none;
+    border: none;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+#deals .deal-container .deal-section .explore-items:hover {
+    color: var(--link-dark-color);
+}
+#deals .deal-container .deal-section .explore-items:active {
+    transform: scale(0.95);
+    transition: all 0.1s ease;
+}
+#deals .deal-container .deal-section .explore-items::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: var(--white);
+    border-radius: 5px;
+    opacity: .7;
+}
+
+#deals .deal-container .deal-section .explore-items:hover::after {
+    background: var(--link-dark-color);
+}
+/* Deals section End*/
 
 
 /* Responsive styles */
@@ -440,11 +525,31 @@ header .header-styles .left .sections .menu-close-btn {
     header .header-styles .right .search input {
         width: 200px;
     }
+    .banner {
+        height: 600px;
+    }
+    .banner .banner-content .banner-title {
+        font-size: 3rem;
+        max-width: 80%;
+    }
+    
+    .banner .banner-content .banner-subtitle {
+        font-size: 20px;
+    }
 }
 
 /* Tablet styles */
-@media screen and (max-width: 992px) {
-   
+@media screen and (max-width: 970px) {
+    .banner .banner-content .banner-title {
+        font-size: 2.6rem;
+    }
+    .banner .banner-content .banner-category {
+        font-size: 1.2rem;
+    }
+    
+    .banner .banner-content .banner-subtitle {
+        font-size: 1.1rem;
+    }
 }
 
 /* Mobile styles */
@@ -452,6 +557,32 @@ header .header-styles .left .sections .menu-close-btn {
     .theme-toggle {
         top: 10px;
         right: 10px;
+    }
+    .banner {
+        height: 500px;
+    }
+    .banner .banner-content .banner-title {
+        font-size: 2rem;
+    }
+    
+    .banner .banner-content .banner-subtitle {
+        font-size: .8rem;
+    }
+    .banner .banner-nav .nav-arrow {
+        width: 40px;
+        height: 40px;
+        font-size: 24px;
+    }
+    .banner .banner-nav .indicator-dot {
+        width: 30px;
+        height: 10px;
+    }
+    .banner .banner-content .shop-now-btn {
+        padding: 10px 30px;
+        font-size: 16px;
+    }
+    .banner .banner-content {
+        padding: 30px;
     }
 }
 /* Medium mobile styles */
@@ -560,7 +691,7 @@ header .header-styles .left .sections .menu-close-btn {
     }
 }
 
-/* Small mobile styles */
+/* Big mobile styles */
 @media screen and (max-width: 660px) {
     /* Create hamburger button styles and overlay menu */
     .hamburger {
@@ -629,7 +760,6 @@ header .header-styles .left .sections .menu-close-btn {
     }
 }
 
-
 /* Add hamburger menu functionality */
 @media screen and (max-width: 590px) {
     header .header-styles .right  {
@@ -663,8 +793,35 @@ header .header-styles .left .sections .menu-close-btn {
     header .header-styles .left .sections.active {
         height: 400px;
     }
+    .banner {
+        height: 400px;
+    }
+    .banner .banner-content .banner-title {
+        font-size: 2rem;
+        max-width: 100%;
+    }
+    .banner .banner-content .banner-subtitle {
+        font-size: .6rem;
+    }
+    .banner .banner-nav .nav-arrow {
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+    }
+    .banner .banner-content .shop-now-btn {
+        padding: .4rem 1.5rem;
+        font-size: .8rem;
+    }
+    .banner .banner-content {
+        padding: 40px;
+    }
+    .banner .banner-indicator .indicator-dot {
+        width: 4rem;
+        height: .38rem;
+    }
 }
 
+/* Medium Mobile Styles */
 @media screen and (max-width: 480px) {
     header .header-styles .left .sections.active {
         width: 70%;
@@ -695,8 +852,41 @@ header .header-styles .left .sections .menu-close-btn {
         align-self: center;
         justify-self: start;
     }
+    .banner {
+        height: 350px;
+    }
+    .banner .banner-content .banner-category {
+        margin-bottom: 1rem;
+        font-size: .8rem;
+    }
+    .banner .banner-content .banner-title {
+        font-size: 1rem;
+        max-width: 100%;
+        margin-bottom: .9rem;
+    }
+    .banner .banner-content .banner-subtitle {
+        font-size: .8rem;
+        margin-bottom: 1rem;
+    }
+    .banner .banner-nav .nav-arrow {
+        width: 1.5rem;
+        height: 1.5rem;
+        font-size: 1.1rem;
+    }
+    .banner .banner-content .shop-now-btn {
+        padding: .4rem 1rem;
+        font-size: .7rem;
+    }
+    .banner .banner-content {
+        padding: 40px;
+    }
+    .banner .banner-indicator .indicator-dot {
+        width: 2rem;
+        height: .38rem;
+    }
 }
 
+/* Small Mobile Style */
 @media screen and (max-width: 360px) {
     header .header-styles .left .sections ul {
         gap: .5rem;
@@ -720,6 +910,41 @@ header .header-styles .left .sections .menu-close-btn {
     }
     header .header-styles .right.active .search input {
         width: 100px;    
+    }
+    .banner {
+        height: 300px;
+    }
+    .banner .banner-content {
+        width: 100%;
+    }
+    .banner .banner-content .banner-category {
+        margin-bottom: 1rem;
+        font-size: .8rem;
+    }
+    .banner .banner-content .banner-title {
+        font-size: 1rem;
+        max-width: 100%;
+        margin-bottom: .9rem;
+    }
+    .banner .banner-content .banner-subtitle {
+        font-size: .8rem;
+        margin-bottom: 1rem;
+    }
+    .banner .banner-nav .nav-arrow {
+        width: 1.5rem;
+        height: 1.5rem;
+        font-size: 1.1rem;
+    }
+    .banner .banner-content .shop-now-btn {
+        padding: .4rem 1rem;
+        font-size: .7rem;
+    }
+    .banner .banner-content {
+        padding: 40px;
+    }
+    .banner .banner-indicator .indicator-dot {
+        width: 2rem;
+        height: .38rem;
     }
     
 }
