--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -244,7 +244,7 @@ header .header-styles .left .sections .menu-close-btn {
     position: relative;
     height: 750px;
     width: 100%;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
     background: url('../images/bg-1.jpg') no-repeat;
     background-size: cover;
     background-position: center center;
@@ -536,6 +536,19 @@ header .header-styles .left .sections .menu-close-btn {
     .banner .banner-content .banner-subtitle {
         font-size: 20px;
     }
+    #deals .deal-container {
+        flex-wrap: wrap;
+    }
+    #deals .deal-container .deal-section {
+        width: 90%;
+        margin: 0 auto;
+        height: 400px;
+        padding: 3rem 2rem;
+        margin-bottom: 2rem;
+    }
+    #deals .deal-container .deal-section:last-child {
+        margin-bottom: 0;
+    }
 }
 
 /* Tablet styles */
@@ -585,7 +598,7 @@ header .header-styles .left .sections .menu-close-btn {
         padding: 30px;
     }
 }
-/* Medium mobile styles */
+/* Big mobile styles */
 @media screen and (max-width: 660px) {
     /* Add a mobile menu button */
     .mobile-menu-button {
@@ -758,6 +771,24 @@ header .header-styles .left .sections .menu-close-btn {
     header .header-styles .left .sections ul li .section-link.active::after {
         margin-top: 1rem;
     }
+
+    #deals .deal-container .deal-section {
+        width: 100%;
+        height: 300px;
+        padding: 2rem 1rem;
+    }
+    #deals .deal-container .deal-section .deal-title {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+    }
+    #deals .deal-container .deal-section .deal-heading {
+        font-size: 1.5rem;
+        max-width: 50%;
+        margin-bottom: 0.5rem;
+    }
+    #deals .deal-container .deal-section .deal-price {
+        font-size: 1.5rem;
+    }
 }
 
 /* Add hamburger menu functionality */
@@ -884,6 +915,30 @@ header .header-styles .left .sections .menu-close-btn {
         width: 2rem;
         height: .38rem;
     }
+
+    #deals .deal-container .deal-section {
+        width: 100%;
+        height: 200px;
+        padding: 2rem 1rem;
+    }
+    #deals .deal-container .deal-section .deal-title {
+        font-size: .8rem;
+        margin-bottom: .5rem;
+    }
+    #deals .deal-container .deal-section .deal-heading {
+        font-size: 1.2rem;
+        max-width: 50%;
+        margin-bottom: 0.5rem;
+    }
+    #deals .deal-container .deal-section .deal-offer {
+        font-size: .8rem;
+        margin-bottom: 1rem;
+    }
+    #deals .deal-container .deal-section .explore-items {
+        font-size: 1rem;
+        padding: 10px 20px;
+    }
+
 }
 
 /* Small Mobile Style */
@@ -945,6 +1000,27 @@ header .header-styles .left .sections .menu-close-btn {
     .banner .banner-indicator .indicator-dot {
         width: 2rem;
         height: .38rem;
+    }
+    #deals .deal-container .deal-section {
+        height: 170px;
+        padding: 1rem 1rem;
+    }
+    #deals .deal-container .deal-section .deal-title {
+        font-size: .7rem;
+        margin-bottom: .4rem;
+    }
+    #deals .deal-container .deal-section .deal-heading {
+        font-size: 1rem;
+        max-width: 50%;
+        margin-bottom: 0.5rem;
+    }
+    #deals .deal-container .deal-section .deal-offer {
+        font-size: .7rem;
+        margin-bottom: .4rem;
+    }
+    #deals .deal-container .deal-section .explore-items {
+        font-size: .7rem;
+        padding: 10px 20px;
     }
     
 }
