--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -470,6 +470,49 @@ header .header-styles .left .sections .menu-close-btn {
 }
 /* Deals section End*/
 
+/* New Arrivals */
+#new-arrivals {
+    margin: 5rem 0;
+}
+#new-arrivals .new-arrivals-container h2 {
+    font-size: 2rem;
+    font-weight: 800;
+    color: var(--link-dark-color);
+    margin-bottom: 3rem;
+    display: flex;
+    align-items: center;
+}
+#new-arrivals .new-arrivals-container h2::before {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 30px;
+    background: var(--special-rect);
+    border-radius: 5px;
+    margin-right: 1rem;
+}
+#new-arrivals .new-arrivals-container .showcase-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+#new-arrivals .new-arrivals-container .showcase-container .navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+#new-arrivals .new-arrivals-container .navigation .next {
+    position: relative;
+    z-index: 1;
+    top: 150px;
+    right: -1280px;
+}
+
+
+
+/* New Arrivals end */
 
 /* Responsive styles */
 @media screen and (max-width: 1440px) {
