--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -86,6 +86,20 @@ html {
 [data-theme="dark"] header .header-styles .right .search input::placeholder {
     color: #999;
 }
+
+/* scroll animation */
+.scroll-animation {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all 1s ease-in-out;
+}
+.scroll-animation.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+
 body {
     background-color: var(--white);
     font-family: poppins, sans-serif;
@@ -412,7 +426,7 @@ header .header-styles .left .sections .menu-close-btn {
     padding:3rem 2rem;
     border-radius: 1rem;
     box-shadow: 0 0 10px var(--link-dark-color);
-    transition: all .3s ease-in-out;
+    transition: all .7s ease-in-out;
     
 }
 #deals .deal-container .deal-section:hover{
@@ -498,16 +512,16 @@ header .header-styles .left .sections .menu-close-btn {
     align-items: center;
     align-content: center;
 }
-#new-arrivals .new-arrivals-container .showcase-container .navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#new-arrivals .navigation {
+   position: relative;
+   bottom: 0;
+   width: 100%;
+   height: 100%;
+   z-index: 12;
+   display: flex;
+   justify-content: space-between;
 }
-#new-arrivals .new-arrivals-container .navigation .next {
-    position: relative;
-    z-index: 1;
-    top: 150px;
-    right: -1280px;
+#new-arrivals .navigation .next {
 }
 
 
